tests/ui/higher-ranked/trait-bounds/hrtb-exists-forall-trait-covariant.stderr
error: implementation of `Trait` is not general enough
  --> $DIR/hrtb-exists-forall-trait-covariant.rs:33:5
   |
LL |     foo::<()>();
   |     ^^^^^^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `()` must implement `Trait<for<'b> fn(fn(&'b u32))>`
   = note: ...but it actually implements `Trait<fn(fn(&'0 u32))>`, for some specific lifetime `'0`

error: aborting due to 1 previous error

